# chain-lit-example

./: .env  .gitignore  README.md  app_langchain.py  main.py  pyproject.toml  qwen_app.py  qwen_app_langchain.py  test_langchain.py  test_qwen.py  test_qwen_langchain.py
src/chat/: chat_manager.py
src/models/: base_model.py  qwen_model.py
