[tool.poetry]
name = "chain-lit-example"
version = "0.1.0"
description = ""
authors = ["Fernando Rodriguez <fernando.rodriguez@ailylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.6,<3.11"
transformers = "^4.46.2"
torch = "^2.5.1"
chainlit = "^1.3.2"
tiktoken = "^0.8.0"
accelerate = "^1.1.1"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
langchain = "^0.3.7"
langchain-huggingface = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
